--- a/src/components/AudioPlayer/AudioPlayer.module.scss
+++ b/src/components/AudioPlayer/AudioPlayer.module.scss
@@ -84,6 +84,7 @@
     align-items: center;
     justify-content: center;
     margin-top: var(--space-small);
+    margin-left: var(--spacing-medium);
   }
 }
 
